--- a/Nodejs/TSE/Phase3/package.json
+++ b/Nodejs/TSE/Phase3/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "debug": "node --inspect-brk dist/index.js",
+    "test": "jest --watch",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
@@ -12,8 +14,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
