--- a/Nodejs/TSE/Phase3/package.json
+++ b/Nodejs/TSE/Phase3/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "start": "node dist/index.js",
     "debug": "node --inspect-brk dist/index.js",
-    "test": "jest --watch",
+    "test":"jest",
+    "ci-test": "jest --watch",
     "build": "tsc",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/error.ts"
   },
   "keywords": [],
   "author": "",
