--- a/Nodejs/TSE/Phase4/package.json
+++ b/Nodejs/TSE/Phase4/package.json
@@ -14,19 +14,33 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "phase4": "file:"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "phase4": "file:",
+    "pino": "^9.6.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.0",
-    "dotenv": "^16.5.0",
+    "@types/pino": "^7.0.5",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.25.1",
-    "express": "^5.1.0",
     "globals": "^16.0.0",
     "install": "^0.13.0",
     "nodemon": "^3.1.10",
     "npm": "^11.3.0",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
