--- a/DBS/Phase6/package.json
+++ b/DBS/Phase6/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   }
 }
